Fix image distortion on Firefox and IE

--- a/static/css/stsheet.css
+++ b/static/css/stsheet.css
@@ -32,8 +32,7 @@ h1 small {
 img {
     max-width: 45%;
 	margin: 15px;
-    width: auto;
-    height: auto;
+	height: auto;
 }
 
 img.featherlight-image 
